--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "minimist": "^1.1.0",
     "multistream": "^2.0.2",
     "once": "^1.3.0",
+    "payment-license": "https://github.com/emschwartz/payment-license.git",
     "piece-length": "^0.0.0",
     "readable-stream": "^2.0.5",
     "run-parallel": "^1.0.0",
     "simple-sha1": "^2.0.0",
+    "through2": "^2.0.1",
     "xtend": "^4.0.1"
   },
   "devDependencies": {
